--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+@import "bulma/bulma";
+@import "@fortawesome/fontawesome-free/css/all.css";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -12,4 +15,4 @@
  *
  *= require_tree .
  *= require_self
- */
+*/
