Main menu created

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>VotingSystem</title>
+    <title>Voting System</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +13,7 @@
   </head>
 
   <body>
+    <%= render "shared/menu" %>
     <%= yield %>
   </body>
 </html>
