--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,10 @@
 @import "bulma/bulma";
 @import "@fortawesome/fontawesome-free/css/all.css";
+@import "./**/*";
+    
+html{
+  background-color: $dark;
+}
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
