--- a/app/assets/stylesheets/campaigns.scss
+++ b/app/assets/stylesheets/campaigns.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the campaigns controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.card {
+  .image{
+    height: 100px;
+  }
+ 
+  .card-backgroud{
+    background-color: $grey-dark;
+    border-radius: 5px;
+  }  
+}
